--- a/src/app/medical/medical.component.html
+++ b/src/app/medical/medical.component.html
@@ -352,7 +352,7 @@
                       medicalForm.get('date').touched
                     "
                   >
-                    Please enter valid DOB
+                    Please enter valid Date
                   </div> 
                 </div>
                 
